Fix: install dir

--- a/srcs/default.conf
+++ b/srcs/default.conf
@@ -13,7 +13,7 @@ server {
 	ssl_certificate_key	/etc/ssl/private/private.key;
 
 	# root /var/www/html;
-	root /usr/src/wordpress;
+	root /var/www/wordpress;
 
 	# Add index.php to the list if you are using PHP
 	index index.php index.html index.htm;
