--- a/srcs/default.conf
+++ b/srcs/default.conf
@@ -3,6 +3,7 @@ server {
 	listen [::]:80 default_server;
 	return 301 https://$host$request_uri;
 }
+
 server {
 	# SSL configuration
 	listen 443 ssl default_server;
@@ -21,9 +22,12 @@ server {
 	server_name localhost;
 
 	location / {
-			# First attempt to serve request as file, then
-			# as directory, then fall back to displaying a 404.
-			try_files $uri $uri/ =404;
+		autoindex off;
+		autoindex_exact_size on;
+		autoindex_format html;
+		# First attempt to serve request as file, then
+		# as directory, then fall back to displaying a 404.
+		try_files $uri $uri/ =404;
 	}
 
 	# pass PHP scripts to FastCGI server
