--- a/srcs/default.conf
+++ b/srcs/default.conf
@@ -22,7 +22,7 @@ server {
 	server_name localhost;
 
 	location / {
-		autoindex off;
+		autoindex on;
 		autoindex_exact_size on;
 		autoindex_format html;
 		# First attempt to serve request as file, then
